0025749: Eliminate GCC warning -Wswitch in Android build